[package]
name = "tokio-udpsender"
version = "0.1.0"
authors = ["Johan Mulder <johan@mumasoft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
